Basic outline and setup of html and css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Colmar Academy</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
     <!-- Header -->
 
-    <header>
-
+    <header class="flex-row">
+      <div class="logo">
+        <ul>
+          <li><img src="resources/images/ic-logo.svg" alt="logo">
+             </li>
+          <li>Colmar</li>
+          <li>Academy</li>
+        </ul>
+      </div>
     </header>
 
     <!-- Supporting Section -->
