Header wireframe complete

--- a/index.html
+++ b/index.html
@@ -9,26 +9,46 @@
   <body>
     <!-- Header -->
 
-    <header class="flex-row">
+    <header class="container flex-row">
       <div class="logo">
-        <ul>
+        <ul class="flex-row">
           <li><img src="resources/images/ic-logo.svg" alt="logo">
              </li>
           <li>Colmar</li>
           <li>Academy</li>
         </ul>
       </div>
+      <nav>
+        <ul class="flex-row">
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For Companies</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <!-- Supporting Section -->
+    <!-- Main Banner Section -->
 
-    <div class="supporting">
+    <div class="main-banner">
 
     </div>
 
-    <!-- Supporting Section -->
+    <!-- Supporting Banner Section -->
 
-    <div class="supporting">
+    <div class="support-banner">
+
+    </div>
+
+    <!-- Courses Section -->
+
+    <div class="courses">
+
+    </div>
+
+    <!-- Thesis Section -->
+
+    <div class="thesis">
 
     </div>
 
