--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -31,13 +31,87 @@
     <!-- Main Banner Section -->
 
     <div class="main-banner">
-
+      <div class="container flex-row">
+        <div class="col-main">
+          <div class="img-container">
+            <img src="resources/images/banner.jpg" alt="Students Working Together" />
+          </div>
+        </div>
+        <div class="col-sub">
+          <h1>Learn Something New Everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <div class="button">
+            <span class="btn-text">Start here</span>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Supporting Banner Section -->
 
-    <div class="support-banner">
-
+    <div class="support-banner flex-row">
+      <div class="container flex-row">
+        <div class="col-main">
+          <div class="img-container">
+            <img src="resources/images/information-main.jpg" alt="Man Studying Book" />
+          </div>
+          <div class="img-caption flex-col">
+            <h2 class="title">It Doesn't Hurt to Keep Practicing</h2>
+            <p class="quote">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. ZEtiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            <p class="citation">Emanuel, Sr Strategist at Hiring.com</p>
+          </div>
+        </div>
+        <div class="col-sub">
+          <div class="info orientation flex-row">
+            <div class="info-img">
+              <img src="resources/images/information-orientation.jpg" alt="Students Walking on Campus" />
+            </div>
+            <div class="info-details flex-col">
+              <div class="info-title">
+                <h3>Orientation Date</h3>
+              </div>
+              <div class="info-description">
+                <p>Tue 10/11 &amp Wed 10/12: 8am-3pm</p>
+              </div>
+              <div class="info-link">
+                <p><a href="#">Red More</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="info campus flex-row">
+            <div class="info-img">
+              <img src="resources/images/information-campus.jpg" alt="Students Studying" />
+            </div>
+            <div class="info-details flex-col">
+              <div class="info-title">
+                <h3>Our Campus</h3>
+              </div>
+              <div class="info-description">
+                <p>Find which campus is close by you</p>
+              </div>
+              <div class="info-link">
+                <p><a href="#">Red More</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="info guest-lecture flex-row">
+            <div class="info-img">
+              <img src="resources/images/information-guest-lecture.jpg" alt="Headshot of Professor">
+            </div>
+            <div class="info-details flex-col">
+              <div class="info-title">
+                <h3>Our Guest Lecture</h3>
+              </div>
+              <div class="info-description">
+                <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+              </div>
+              <div class="info-link">
+                <p><a href="#">Red More</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Courses Section -->
