--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>Tue 10/11 &amp Wed 10/12: 8am-3pm</p>
               </div>
               <div class="info-link">
-                <p><a href="#">Red More</a></p>
+                <p><a href="#">Read More</a></p>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
                 <p>Find which campus is close by you</p>
               </div>
               <div class="info-link">
-                <p><a href="#">Red More</a></p>
+                <p><a href="#">Read More</a></p>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 <p>Join a keynote with Oliver Sack about music in medical treatment</p>
               </div>
               <div class="info-link">
-                <p><a href="#">Red More</a></p>
+                <p><a href="#">Read More</a></p>
               </div>
             </div>
           </div>
@@ -117,7 +117,101 @@
     <!-- Courses Section -->
 
     <div class="courses">
+      <div class="container flex-row">
+        <h2>Start Learning</h2>
 
+        <!-- Course 1 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-software.jpg" alt="Computer Screens" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Software Engineering</li>
+              <li>Courses</li>
+              <li>Web Development, Mobile Development, iOT, APIs</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Course 2 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-computer-art.jpg" alt="Peson Holding Phone" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Computer Art</li>
+              <li>Courses</li>
+              <li>Imaging &amp Design, Web Design, Motion Graphics &amp Visual Effects, Computer Animation</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Course 3 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-design.jpg" alt="Person with Camera" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Design</li>
+              <li>Courses</li>
+              <li>User Experience Design, User Research, Visual Design</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Course 4 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-data.jpg" alt="Laptop Screen with Charts" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Data</li>
+              <li>Courses</li>
+              <li>Data Science, Big Data, SQL, Data Visualizaion</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Course 5 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-business.jpg" alt="Chess Board" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Business</li>
+              <li>Courses</li>
+              <li>Product Development, Business Development, Startup</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Course 6 -->
+
+        <div class="course flex-col">
+          <div class="course-img">
+            <img src="resources/images/course-marketing.jpg" alt="person using smart watch" />
+          </div>
+          <div class="course-info">
+            <ul class="flex-col">
+              <li>Marketing</li>
+              <li>Courses</li>
+              <li>Analytics, Content Marketing, Mobile Marketing</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- End Courses -->
+      </div>
     </div>
 
     <!-- Thesis Section -->
