Thesis section wireframe done and cleaned up formatting on supporting banner

--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
           <div class="img-container">
             <img src="resources/images/information-main.jpg" alt="Man Studying Book" />
           </div>
-          <div class="img-caption flex-col">
-            <h2 class="title">It Doesn't Hurt to Keep Practicing</h2>
-            <p class="quote">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. ZEtiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-            <p class="citation">Emanuel, Sr Strategist at Hiring.com</p>
-          </div>
+          <ul class="img-caption">
+            <li class="title"><h2>It Doesn't Hurt to Keep Practicing</h2></li>
+            <li class="quote">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. ZEtiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</li>
+            <li class="citation">Emanuel, Sr Strategist at Hiring.com</li>
+          </ul>
         </div>
         <div class="col-sub">
+
+          <!-- Info Section 1 -->
+
           <div class="info orientation flex-row">
             <div class="info-img">
               <img src="resources/images/information-orientation.jpg" alt="Students Walking on Campus" />
@@ -78,6 +81,9 @@
               </div>
             </div>
           </div>
+
+          <!-- Info Section 2 -->
+
           <div class="info campus flex-row">
             <div class="info-img">
               <img src="resources/images/information-campus.jpg" alt="Students Studying" />
@@ -94,6 +100,9 @@
               </div>
             </div>
           </div>
+
+          <!-- Info Section 3 -->
+
           <div class="info guest-lecture flex-row">
             <div class="info-img">
               <img src="resources/images/information-guest-lecture.jpg" alt="Headshot of Professor">
@@ -110,6 +119,8 @@
               </div>
             </div>
           </div>
+
+          <!-- End Info Section -->
         </div>
       </div>
     </div>
@@ -217,7 +228,55 @@
     <!-- Thesis Section -->
 
     <div class="thesis">
+      <div class="container flex-row">
+        <div class="col-main">
+          <div class="img-container">
+            <video src="resources/videos/thesis.mp4" controls>
+              Your Browser Does Not Support This Video
+            </video>
+          </div>
+          <ul>
+            <li><h3>Reimagine Urban</h3></li>
+            <li>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Se non accumsan urna. phasellus se consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</li>
+          </ul>
+        </div>
+        <div class="col-sub">
 
+          <!-- Thesis Project 1 -->
+
+          <div class="info flex-row">
+            <div class="info-img">
+              <img src="resources/images/thesis-fisma.jpg" alt="Mess of papers on desk" />
+            </div>
+            <div class="info-details flex-col">
+              <div class="info-title">
+                <h3>Fisma: Design and Prototype</h3>
+              </div>
+              <div class="info-description">
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Thesis Project 2 -->
+
+          <div class="info flex-row">
+            <div class="info-img">
+              <img src="resources/images/thesis-now-and-then.jpg" alt="Downtown city skyline" />
+            </div>
+            <div class="info-details flex-col">
+              <div class="info-title">
+                <h3>Now and Then</h3>
+              </div>
+              <div class="info-description">
+                <p>Research study about New York</p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
     </div>
 
     <!-- footer section -->
