--- a/index.html
+++ b/index.html
@@ -282,7 +282,18 @@
     <!-- footer section -->
 
     <footer>
-
+      <hr>
+      <div class="container flex-row">
+        <span>&copy 2016 Colmar Academy. All rights reserved</span>
+        <nav>
+          <ul class="flex-row">
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
     </footer>
+
+
   </body>
 </html>
