Header and nav simple formatting done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Header -->
 
     <header class="container flex-row">
-      <div class="logo">
+      <div class="company-name">
         <ul class="flex-row">
-          <li><img src="resources/images/ic-logo.svg" alt="logo">
+          <li><img src="resources/images/ic-logo.svg" class="logo" alt="logo">
              </li>
           <li>Colmar</li>
           <li>Academy</li>
@@ -38,8 +38,10 @@
           </div>
         </div>
         <div class="col-sub">
-          <h1>Learn Something New Everyday</h1>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <ul>
+            <li><h1>Learn Something New Everyday</h1></li>
+            <li><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3><li>
+          </ul>
           <div class="button">
             <span class="btn-text">Start here</span>
           </div>
