Main banner basic styling done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
   <body>
@@ -34,17 +35,15 @@
       <div class="container flex-row">
         <div class="col-main">
           <div class="img-container">
-            <img src="resources/images/banner.jpg" alt="Students Working Together" />
+            <img src="resources/images/banner.jpg" alt="Students Studying Together" />
           </div>
         </div>
         <div class="col-sub">
           <ul>
             <li><h1>Learn Something New Everyday</h1></li>
-            <li><h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3><li>
+            <li><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2><li>
+            <li class="button flex-col"><a href="#">Start here</a></li>
           </ul>
-          <div class="button">
-            <span class="btn-text">Start here</span>
-          </div>
         </div>
       </div>
     </div>
