basic styling done on site

--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
             <li>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Se non accumsan urna. phasellus se consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula"</li>
           </ul>
         </div>
-        <div class="col-sub">
+
+
+        <div class="col-sub flex-col">
 
           <!-- Thesis Project 1 -->
 
