Responsive design for mobile finished on header and main banner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
   </head>
@@ -20,11 +21,17 @@
         </ul>
       </div>
       <nav>
-        <ul class="flex-row">
+        <ul class="flex-row desktop">
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">For Companies</a></li>
           <li><a href="#">Sign In</a></li>
+        </ul>
+        <ul class="flex-row mobile">
+          <li><img src="resources\images\ic-logo.svg" alt="Colmar Academy Logo" /></li>
+          <li><a href="#"><img src="resources\images\ic-on-campus.svg" alt="Desk Icon" /></a></li>
+          <li><a href="#"><img src="resources\images\ic-online.svg" alt="Computer Icon" /></a></li>
+          <li><a href="#"><img src="resources\images\ic-login.svg" alt="Login Icon" /></a></li>
         </ul>
       </nav>
     </header>
