mobile responsive design finished

--- a/index.html
+++ b/index.html
@@ -238,10 +238,11 @@
     <!-- Thesis Section -->
 
     <div class="thesis">
+      <h1>Thesis Exhibits</h1>
       <div class="container flex-row">
         <div class="col-main">
           <div class="img-container">
-            <video src="resources/videos/thesis.mp4" controls>
+            <video src="resources/videos/thesis.mp4" autoplay loop>
               Your Browser Does Not Support This Video
             </video>
           </div>
